refactor: update transaction value to amount in model and service layers; adjust SQL data for consistency